# rs-webrtc-http

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: server.rs  server_client.rs
src/: client.rs  server.rs  util.rs
