[package]
authors = ["nathanfaucett@gmail.com"]
description = "http over webrtc server/client"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "webrtc-http"
repository = "https://github.com/aicacia/rs-webrtc-http"
rust-version = "1.56"
version = "0.1.0"

[lib]
name = "webrtc_http"

[dependencies]
webrtc = { version = "0", default-features = false }
dashmap = { version = "6", default-features = false }
bytes = { version = "1", default-features = false }
rand = { version = "0", default-features = false }
axum = { version = "0", default-features = false, features = [
  "tokio",
  "http1",
], optional = true }
tokio = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1"
http-body-util = "0"
hyper-util = { version = "0", features = ["server-graceful"] }
reqwest = { version = "0", features = ["json"] }
anyhow = "1"
tungstenite = { version = "0", features = ["handshake", "native-tls"] }
dotenvy = "0"
webrtc-p2p = "0"
urlencoding = "2"

[features]
axum = ["dep:axum"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["axum"]
